[gd_scene load_steps=2 format=3 uid="uid://c2fvlh6wyx84i"]

[ext_resource type="Script" path="res://scenes/shop_item.gd" id="1_ckfe1"]

[node name="ShopItem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ckfe1")

[node name="ItemContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BuyButton" type="Button" parent="ItemContainer"]
layout_mode = 2
text = "Buy"

[node name="Discarding" type="Node" parent="."]

[connection signal="pressed" from="ItemContainer/BuyButton" to="." method="_on_buy_button_pressed"]
